--- a/donate.html
+++ b/donate.html
@@ -100,7 +100,7 @@
     </div>
   </div>
   <div id="lightbox_content" style="height: 800px">
-    <form onSubmit="nextDonate(this)" style="padding: 10px; border: 2px solid white; background: #000; color: white; font-size: 32px">
+    <form onSubmit="nextDonate(this)" style="padding: 10px; border: 2px solid white; background: #000; color: white; font-size: 32px; width: 400px; margin: 0 auto;">
       <h3>Your Information</h3>
       <p>
         <input id="name_input" placeholder="Your Name">
