Donation page on our site

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <img src="dththpac.png" class="logo" alt="Americans Against Insecure Billionaires with Tiny Hands PAC Logo">
       <h1>Americans Against<br class="large-breakpoint" /> Insecure Billionaires<br class="large-breakpoint" /> with Tiny Hands PAC</h1>
       <p>Lend a hand to help get our <br />#ReleaseTheMeasurements ad on TV!</p>
-      <a href="https://donaldtrumphastinyhands.github.io/dotcom/donate.html" target="_blank" class="button" onclick="ga('send', 'event', 'Click', 'Donate');">SUPPORT THE AD</a>
+      <a href="/donate.html" target="_blank" class="button" onclick="ga('send', 'event', 'Click', 'Donate');">SUPPORT THE AD</a>
       <a href="https://tinyhandspac.storenvy.com/" target="_blank" class="button" onclick="ga('send', 'event', 'Click', 'Shop');">SHOP</a>
       <div class="social">
         <div class="video_box">
