--- a/donate.html
+++ b/donate.html
@@ -3,20 +3,20 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DONATE to Americans Against Insecure Billionaires with Tiny Hands PAC</title>
-  <link rel="icon" href="https://donaldtrumphastinyhands.github.io/dotcom/favicon.jpg" type="image/x-icon" />
+  <link rel="icon" href="https://donaldtrumphastinyhands.com/favicon.jpg" type="image/x-icon" />
   <meta charset="utf-8">
   <meta property="og:title" content="DONATE to Americans Against Insecure Billionaires with Tiny Hands PAC" />
-  <meta property="og:url" content="https://donaldtrumphastinyhands.github.io/dotcom/donate.html" />
+  <meta property="og:url" content="https://donaldtrumphastinyhands.com/donate.html" />
   <meta property="og:description" content="SUPPORT THE CAUSE - DONATE TO Americans Against Insecure Billionaires with Tiny Hands PAC ✋ 🕵!" >
-  <meta property="og:image" content="https://donaldtrumphastinyhands.github.io/dotcom/share-preview.jpg" />
+  <meta property="og:image" content="https://donaldtrumphastinyhands.com/share-preview.jpg" />
   <meta property="og:type" content="website" />
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@TrumpHandsPAC">
   <meta name="twitter:title" content="DONATE to Americans Against Insecure Billionaires with Tiny Hands PAC" />
   <meta name="twitter:description" content="SUPPORT THE CAUSE - DONATE TO Americans Against Insecure Billionaires with Tiny Hands PAC ✋ 🕵!" >
-  <meta name="twitter:image:src" content="https://donaldtrumphastinyhands.github.io/dotcom/share-preview.jpg" />
-  <link rel="stylesheet" type="text/css" href="https://donaldtrumphastinyhands.github.io/dotcom/style.css">
+  <meta name="twitter:image:src" content="https://donaldtrumphastinyhands.com/share-preview.jpg" />
+  <link rel="stylesheet" type="text/css" href="https://donaldtrumphastinyhands.com/style.css">
   <script src="https://checkout.stripe.com/checkout.js"></script>
   <style type="text/css">
     .inner { width: 80%; }
@@ -38,14 +38,14 @@
 <body>
   <div class="content">
     <div style="display: none;" class="inner" id="thanks"> 
-      <img src="https://donaldtrumphastinyhands.github.io/dotcom/dththpac.png" class="logo" alt="Americans Against Insecure Billionaires with Tiny Hands PAC Logo">
+      <img src="https://donaldtrumphastinyhands.com/dththpac.png" class="logo" alt="Americans Against Insecure Billionaires with Tiny Hands PAC Logo">
       <h2>We've really got to hand it to you - your support means a whole lot</h2>
       <p>- Your Friends at Americans Against Insecure Billionaires with Tiny Hands PAC</p>
-      <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://donaldtrumphastinyhands.github.io/dotcom/donate.html" class="button">Share on Facebook</a>
-      <a target="_blank" href="https://twitter.com/intent/tweet?vial=trumptinyhands&text=I+just+donated+to+@trumptinyhands+-+you+should+too&related=trumptinyhands&url=https://donaldtrumphastinyhands.github.io/dotcom/donate.html" class="button">Share on Twitter</a>
+      <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://donaldtrumphastinyhands.com/donate.html" class="button">Share on Facebook</a>
+      <a target="_blank" href="https://twitter.com/intent/tweet?vial=trumptinyhands&text=I+just+donated+to+@trumptinyhands+-+you+should+too&related=trumptinyhands&url=https://donaldtrumphastinyhands.com/donate.html" class="button">Share on Twitter</a>
     </div>
     <div style="display: block;"  class="inner" id="amounts">
-      <img src="https://donaldtrumphastinyhands.github.io/dotcom/dththpac.png" class="logo" alt="Americans Against Insecure Billionaires with Tiny Hands PAC Logo">
+      <img src="https://donaldtrumphastinyhands.com/dththpac.png" class="logo" alt="Americans Against Insecure Billionaires with Tiny Hands PAC Logo">
       <h1>Americans Against<br class="large-breakpoint" /> Insecure Billionaires<br class="large-breakpoint" /> with Tiny Hands PAC</h1>
       <p>Lend a hand to help get our <br />#ReleaseTheMeasurements ad on TV!</p>
 
@@ -192,7 +192,7 @@
       var dollers = (amount/100).toString()
 
       handler.open({
-        image: 'https://donaldtrumphastinyhands.github.io/dotcom/share-preview.jpg',
+        image: 'https://donaldtrumphastinyhands.com/share-preview.jpg',
         name: 'Americans Against Insecure Billionaires with Tiny Hands PAC',
         description: '$'+dollers+'.00 Donation',
         amount: amount,
