Maybe this will fix https

--- a/donate.html
+++ b/donate.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DONATE to Americans Against Insecure Billionaires with Tiny Hands PAC</title>
-  <link rel="icon" href="https://donaldtrumphastinyhands.com/favicon.jpg" type="image/x-icon" />
+  <link rel="icon" href="/favicon.jpg" type="image/x-icon" />
   <meta charset="utf-8">
   <meta property="og:title" content="DONATE to Americans Against Insecure Billionaires with Tiny Hands PAC" />
   <meta property="og:url" content="https://donaldtrumphastinyhands.com/donate.html" />
@@ -16,7 +16,7 @@
   <meta name="twitter:title" content="DONATE to Americans Against Insecure Billionaires with Tiny Hands PAC" />
   <meta name="twitter:description" content="SUPPORT THE CAUSE - DONATE TO Americans Against Insecure Billionaires with Tiny Hands PAC ✋ 🕵!" >
   <meta name="twitter:image:src" content="https://donaldtrumphastinyhands.com/share-preview.jpg" />
-  <link rel="stylesheet" type="text/css" href="https://donaldtrumphastinyhands.com/style.css">
+  <link rel="stylesheet" type="text/css" href="/style.css">
   <script src="https://checkout.stripe.com/checkout.js"></script>
   <style type="text/css">
     .inner { width: 80%; }
@@ -38,7 +38,7 @@
 <body>
   <div class="content">
     <div style="display: none;" class="inner" id="thanks"> 
-      <img src="https://donaldtrumphastinyhands.com/dththpac.png" class="logo" alt="Americans Against Insecure Billionaires with Tiny Hands PAC Logo">
+      <img src="/dththpac.png" class="logo" alt="Americans Against Insecure Billionaires with Tiny Hands PAC Logo">
       <h2>We've really got to hand it to you - your support means a whole lot</h2>
       <p>- Your Friends at Americans Against Insecure Billionaires with Tiny Hands PAC</p>
       <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://donaldtrumphastinyhands.com/donate.html" class="button">Share on Facebook</a>
