Trying to fix images again...

--- a/donate.html
+++ b/donate.html
@@ -6,16 +6,16 @@
   <link rel="icon" href="/favicon.jpg" type="image/x-icon" />
   <meta charset="utf-8">
   <meta property="og:title" content="DONATE to Americans Against Insecure Billionaires with Tiny Hands PAC" />
-  <meta property="og:url" content="https://donaldtrumphastinyhands.com/donate.html" />
+  <meta property="og:url" content="https://www.donaldtrumphastinyhands.com/donate.html" />
   <meta property="og:description" content="SUPPORT THE CAUSE - DONATE TO Americans Against Insecure Billionaires with Tiny Hands PAC ✋ 🕵!" >
-  <meta property="og:image" content="https://donaldtrumphastinyhands.com/share-preview.jpg" />
+  <meta property="og:image" content="https://www.donaldtrumphastinyhands.com/share-preview.jpg" />
   <meta property="og:type" content="website" />
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@TrumpHandsPAC">
   <meta name="twitter:title" content="DONATE to Americans Against Insecure Billionaires with Tiny Hands PAC" />
   <meta name="twitter:description" content="SUPPORT THE CAUSE - DONATE TO Americans Against Insecure Billionaires with Tiny Hands PAC ✋ 🕵!" >
-  <meta name="twitter:image:src" content="https://donaldtrumphastinyhands.com/share-preview.jpg" />
+  <meta name="twitter:image:src" content="https://www.donaldtrumphastinyhands.com/share-preview.jpg" />
   <link rel="stylesheet" type="text/css" href="/style.css">
   <script src="https://checkout.stripe.com/checkout.js"></script>
   <style type="text/css">
@@ -41,11 +41,11 @@
       <img src="/dththpac.png" class="logo" alt="Americans Against Insecure Billionaires with Tiny Hands PAC Logo">
       <h2>We've really got to hand it to you - your support means a whole lot</h2>
       <p>- Your Friends at Americans Against Insecure Billionaires with Tiny Hands PAC</p>
-      <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://donaldtrumphastinyhands.com/donate.html" class="button">Share on Facebook</a>
-      <a target="_blank" href="https://twitter.com/intent/tweet?vial=trumptinyhands&text=I+just+donated+to+@trumptinyhands+-+you+should+too&related=trumptinyhands&url=https://donaldtrumphastinyhands.com/donate.html" class="button">Share on Twitter</a>
+      <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://www.donaldtrumphastinyhands.com/donate.html" class="button">Share on Facebook</a>
+      <a target="_blank" href="https://twitter.com/intent/tweet?vial=trumptinyhands&text=I+just+donated+to+@trumptinyhands+-+you+should+too&related=trumptinyhands&url=https://www.donaldtrumphastinyhands.com/donate.html" class="button">Share on Twitter</a>
     </div>
     <div style="display: block;"  class="inner" id="amounts">
-      <img src="https://donaldtrumphastinyhands.com/dththpac.png" class="logo" alt="Americans Against Insecure Billionaires with Tiny Hands PAC Logo">
+      <img src="/dththpac.png" class="logo" alt="Americans Against Insecure Billionaires with Tiny Hands PAC Logo">
       <h1>Americans Against<br class="large-breakpoint" /> Insecure Billionaires<br class="large-breakpoint" /> with Tiny Hands PAC</h1>
       <p>Lend a hand to help get our <br />#ReleaseTheMeasurements ad on TV!</p>
 
@@ -192,7 +192,7 @@
       var dollers = (amount/100).toString()
 
       handler.open({
-        image: 'https://donaldtrumphastinyhands.com/share-preview.jpg',
+        image: 'https://www.donaldtrumphastinyhands.com/share-preview.jpg',
         name: 'Americans Against Insecure Billionaires with Tiny Hands PAC',
         description: '$'+dollers+'.00 Donation',
         amount: amount,
