Fixed issue with share preview

--- a/donate/index.html
+++ b/donate/index.html
@@ -147,7 +147,7 @@
 
 <style>
 section.Hero {
-  background-image: url('/media/images/hands-up.original.jpg');
+  background-image: url('/files/images/hands-up.original.jpg');
   background-color: #000;
 }
 
