--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <meta property="og:description" content=""/>
 
     
-    <meta property="og:image" content="http://www.donaldtrumphastinyhands.com/static/CACHE/img/media/images/AAIBWTH-logo.width-1200.png" />
+    <meta property="og:image" content="http://www.donaldtrumphastinyhands.com/files/images/AAIBWTH-logo.width-1200.png" />
 
 
             
@@ -43,7 +43,7 @@
 
   
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image:src" content="http://www.donaldtrumphastinyhands.com/static/CACHE/img/media/images/AAIBWTH-logo.2e16d0ba.fill-1200x630-c100.png">
+  <meta name="twitter:image:src" content="http://www.donaldtrumphastinyhands.com/files/images/AAIBWTH-logo.2e16d0ba.fill-1200x630-c100.png">
 
 <meta name="twitter:url" content="http://www.donaldtrumphastinyhands.com/">
 <meta name="twitter:site" content="@trumphandspac">
@@ -150,7 +150,7 @@
 
 <style>
 section.Hero {
-  background-image: url('/media/images/hands-up.original.jpg');
+  background-image: url('/files/images/hands-up.original.jpg');
   background-color: #000;
 }
 
@@ -234,7 +234,7 @@ section.Hero {
   <div class="block-WYSIWYG">
 
 
-<div class="rich-text"><p><img class="richtext-image full-width" src="/media/images/AAIBWTH-wordmark.width-800.png" width="800" height="193" alt="Americans Against Insecure Billionaires with Tiny Hands PAC"></p></div>
+<div class="rich-text"><p><img class="richtext-image full-width" src="/files/images/AAIBWTH-wordmark.width-800.png" width="800" height="193" alt="Americans Against Insecure Billionaires with Tiny Hands PAC"></p></div>
 </div>
 </div>
 </div>
