--- a/index.html
+++ b/index.html
@@ -357,10 +357,10 @@ section.Hero {
 </style>
 
 <h2 style="color: #fff; margin-top: 0; padding-top: 0; font-size: 2.3em;">
-I Support the Effort</h2>
+Sign the Petition</h2>
 
 <form action="https://docs.google.com/forms/d/1B9X2FltWDbdDRcjnMD6NuZQK_S9x1-98hmL2Nyy8C5c/formResponse" target="_blank" method="POST" _lpchecked="1">
-          My email address is <input style="width: 14rem;" type="email" name="entry.905179320" placeholder="email@address.com"> and my postal code is
+          I call on Donald Trump to release his official hand measurements! My email address is <input style="width: 14rem;" type="email" name="entry.905179320" placeholder="email@address.com"> and my postal code is
           <input style="width: 5rem;" type="text" name="entry.1425224127" placeholder="20252" class="zip">
           <button type="submit" onclick="ga('send', 'event', 'Click', 'Join');">Please Send Me Some Email</button>
         </form>
