--- a/index.html
+++ b/index.html
@@ -419,7 +419,13 @@ Donate <a href="/donate/?amount=5" >$5</a> <a href="/donate/?amount=20">$20</a> 
     <section class="HTML">
 
 
-<div class="rich-text"><div style="text-align: center; max-width: 1140px; margin: 0 auto;"><iframe width="100%" height="640" src="https://www.youtube.com/embed/5LhNjWoBZck" frameborder="0" allowfullscreen></iframe></div></div>
+<div class="rich-text">
+     <div style="text-align: center; max-width: 1140px; margin: 0 auto;">
+          <p>Media Inquiries please contact Katie Nguyen, Communications Director at <a href="tel:2028300678">(202) 830-0678</a> or <a href="mailto:donaldtrumphastinyhands@gmail.com">donaldtrumphastinyhands@gmail.com</a></p>
+
+          <iframe width="100%" height="640" src="https://www.youtube.com/embed/5LhNjWoBZck" frameborder="0" allowfullscreen></iframe>
+     </div>
+</div>
 </section>
   
 
