--- a/about-us/index.html
+++ b/about-us/index.html
@@ -189,7 +189,9 @@
 <p>Unlike alleged billionaire landlord and tiny-mitted fraud Donald Trump, we do not pay our volunteers. The army of Trump Hand Truth warriors works is only compensated by our righteous cause - to ensure no voter casts a ballot without knowing the hard truth about Donald Trump's soft wimpy infant hands.</p>
 <p>Unlike raccoon-pawed weakling Donald Trump, we do not treat this issue with kid gloves. We have put our statistically average fingers on the pulse of the nation and we know that voters will reject any candidate with stubby corn kernel fingers.</p>
 <p>Unlike fetus-fingered embarrassment Donald Trump, we will not cower from hand-to-hand combat when America's future is at stake.</p>
-<p>Unlike nubbin-fisted failure Donald Trump, we will win. Join us.</p></div>
+<p>Unlike nubbin-fisted failure Donald Trump, we will win. Join us.</p>
+<p>Media Inquiries please contact Katie Nguyen, Communications Director at <a style="text-decoration: underline" href="tel:2028300678">(202) 830-0678</a> or <a style="text-decoration: underline" href="mailto:donaldtrumphastinyhands@gmail.com">donaldtrumphastinyhands@gmail.com</a></p>
+</div>
 </div>
 </div>
 </div>
