--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@ Donate <a href="/donate/?amount=5" >$5</a> <a href="/donate/?amount=20">$20</a> 
 
 <div class="rich-text">
      <div style="text-align: center; max-width: 1140px; margin: 0 auto;">
-          <p>Media Inquiries please contact Katie Nguyen, Communications Director at <a href="tel:2028300678">(202) 830-0678</a> or <a href="mailto:donaldtrumphastinyhands@gmail.com">donaldtrumphastinyhands@gmail.com</a></p>
+          <p>Media Inquiries please contact Katie Nguyen, Communications Director at <a style="text-decoration: underline" href="tel:2028300678">(202) 830-0678</a> or <a style="text-decoration: underline" href="mailto:donaldtrumphastinyhands@gmail.com">donaldtrumphastinyhands@gmail.com</a></p>
 
           <iframe width="100%" height="640" src="https://www.youtube.com/embed/5LhNjWoBZck" frameborder="0" allowfullscreen></iframe>
      </div>
