Updating donation amounts

--- a/donate/index.html
+++ b/donate/index.html
@@ -169,11 +169,11 @@ section.Hero {
   <div class="donation-tray">
     <div class="donation-tray-amount">
       <ul class="donation-hero-amounts">
-        <li><a onclick="promptInfo(100*1)">$1</a></li>
-        <li><a onclick="promptInfo(100*5)">$5</a></li>
-        <li><a onclick="promptInfo(100*10)">$10</a></li>
-        <li><a onclick="promptInfo(100*20)">$20</a></li>
-        <li><a onclick="promptInfo(100*100)">$100</a></li>
+        <li><a onclick="promptInfo(500)">$5</a></li>
+        <li><a onclick="promptInfo(1000)">$10</a></li>
+        <li><a onclick="promptInfo(2000)">$20</a></li>
+        <li><a onclick="promptInfo(10000)">$100</a></li>
+        <li><a onclick="promptInfo(19995)">$199.95</a></li>
         <li class="custom-input-value"><input value="" placeholder="3000" id="donation-custom-value"></li>
       </ul>
       <button onclick="customValue(this)">Continue <i class="fa fa-hand-o-right nudge-animate"></i></button>
