--- a/donate/index.html
+++ b/donate/index.html
@@ -278,7 +278,7 @@ section.Hero {
                         'entry.2019488712': city_input.value,
                         'entry.2018513609': state_input.value,
                         'entry.1093280422': email_input.value,
-                        'entry.796202537': 'd',
+                        'entry.796202537': token,
                         'entry.1778107293': (amount_input.value / 100).toString()
                       }
 
