--- a/donate/index.html
+++ b/donate/index.html
@@ -249,7 +249,7 @@ section.Hero {
                          var amount = document.location.search.toString().match(/amount\=\d./)[0].split('=')[1]
                          var $amount = $('.donation-hero-amounts li:contains($'+amount+')')
 
-                         if( $amount.length > 0 ) $amount.find('a').addClass('.active')
+                         if( $amount.length > 0 ) $amount.find('a').addClass('active')
                          else $('#donation-custom-value').val(amount)
                       } 
                     });
