--- a/donate/lewandowski/index.html
+++ b/donate/lewandowski/index.html
@@ -163,7 +163,7 @@ section.Hero {
 
 <div class="rich-text"><div style="color: #fff; padding-top: 10px;"><h3 style="font-weight: bold;">Help Us Hire Trump's<br />Ex-Campaign Manager</h3>
 <p>If we can raise $100,000 by midnight on Tuesday we will be able to hire
-him and Lewandowski famously strong hands</p></div></div>
+Lewandowski and his famously strong hands</p></div></div>
 </div>
   </div>
   <div class="current-step"><i class="fa fa-usd" id="step-one"></i><i class="fa fa-user"></i><i class="fa fa-credit-card"></i></div>
