--- a/donate/lewandowski/info/index.html
+++ b/donate/lewandowski/info/index.html
@@ -157,7 +157,7 @@
 
     <div id="content" class="row interior">
         <div class="medium-12 columns">
-            <h2>About Us</h2>
+            <h2>Seize this Opportunity!</h2>
             <h3 class="subheader"></h3>
             <hr>
             
@@ -181,7 +181,13 @@
   " class="row-block-content">
   <div class="block-WYSIWYG">
 
+<style>
 
+.rich-text a {
+  color: #382BA4;
+}
+
+</style>
 <div class="rich-text">
 
 <p>Everyone's talking about the huge shakeup at Trump HQ: Trump's right-hand (and regular-handed) man, campaign manager Corey Lewandowski, was fired! We heard they had a falling out because Trump still refuses to release his hand measurements.</p>
