--- a/donate/lewandowski/info/index.html
+++ b/donate/lewandowski/info/index.html
@@ -202,13 +202,7 @@
 <li><b><a href="https://www.donaldtrumphastinyhands.com/donate/lewandowski/?amount=25">Donate now: $100</a></b></li>
 <li><b><a href="https://www.donaldtrumphastinyhands.com/donate/lewandowski/?amount=25">Donate now: $250</a></b></li></ul>
 
-<p>Thanks,</p>
-
-<p>John Baron<br>
-Digital Director<br>
-Americans Against Insecure Billionaires with Tiny Hands PAC</p>
-
-<p>P.S. Unlike the pathetic, tiny-handed weakling, alleged billionaire Trump, we don’t need our $100,000 for an emergency. We need it for an opportunity. Chip in today by our midnight deadline! </p>
+<p>P.S. Unlike the pathetic, tiny-handed weakling, alleged billionaire Trump, we don’t need our $100,000 for an emergency. We need it for an opportunity. <b><a href="https://www.donaldtrumphastinyhands.com/donate/lewandowski/?amount=25">Chip in today by our midnight deadline!</a></p>
 
 <p>With your help these hands could be working for us!</p>
 
