--- a/donate/lewandowski/info/index.html
+++ b/donate/lewandowski/info/index.html
@@ -25,24 +25,19 @@
 
 <meta property="og:title" content="Seize this Opportunity!"/>
 <meta property="og:site_name" content="Americans Against Insecure Billionaires with Tiny Hands PAC"/>
-<meta property="og:url" content="http://www.donaldtrumphastinyhands.com/about-us/" />
+<meta property="og:url" content="https://www.donaldtrumphastinyhands.com/donate/lewandowski/" />
 
 
-            
-
-
-
+<meta property="og:image" content="https://www.donaldtrumphastinyhands.com/files/images/bighands.jpg"/>
 
 
 
 
-
-
-<meta name="twitter:url" content="http://www.donaldtrumphastinyhands.com/about-us/">
+<meta name="twitter:url" content="https://www.donaldtrumphastinyhands.com/donate/lewandowski/">
 <meta name="twitter:site" content="@trumphandspac">
 <meta name="twitter:title" content="Seize this Opportunity!">
 
-            
+            <meta name="twitter:image:src" content="https://www.donaldtrumphastinyhands.com/files/images/bighands.jpg">
 
 
 
@@ -206,6 +201,7 @@
 
 <p>With your help these hands could be working for us!</p>
 
+<p><img src="https://www.donaldtrumphastinyhands.com/files/images/bighands.jpg" alt="Big, Strong Hands"></p>
 
 
 </div>
