--- a/about-us/index.html
+++ b/about-us/index.html
@@ -185,7 +185,7 @@
 
 
 <div class="rich-text"><p>Americans Against Insecure Billionaires with Tiny Hands PAC is a nationwide coalition of patriots dedicated to exposing the truth about Donald Trump's dangerous tiny baby hands.</p>
-<p>We are Republicans, Democrats, and Independents. We are right-handers, left-handers, and ambidextrii. We do not agree on everything, but we all come together around the fact that American cannot risk a president with pathetic stubby mouse fingers.</p>
+<p>We are Republicans, Democrats, and Independents. We are right-handers, left-handers, and ambidextrii. We do not agree on everything, but we all come together around the fact that America cannot risk a president with pathetic stubby mouse fingers.</p>
 <p>Unlike alleged billionaire landlord and tiny-mitted fraud Donald Trump, we do not pay our volunteers. The army of Trump Hand Truth warriors work is only compensated by our righteous cause - to ensure no voter casts a ballot without knowing the hard truth about Donald Trump's soft wimpy infant hands.</p>
 <p>Unlike raccoon-pawed weakling Donald Trump, we do not treat this issue with kid gloves. We have put our statistically average fingers on the pulse of the nation and we know that voters will reject any candidate with stubby corn kernel fingers.</p>
 <p>Unlike fetus-fingered embarrassment Donald Trump, we will not cower from hand-to-hand combat when America's future is at stake.</p>
