--- a/proof/index.html
+++ b/proof/index.html
@@ -211,7 +211,7 @@
   <div class="block-WYSIWYG">
 
 
-<div class="rich-text"><p><img class="richtext-image full-width" src="/files/images/AAIBWTH-logo.width-800.png" width="800" height="800" alt="AAIBWTH-logo.png"></p></div>
+<div class="rich-text"><p><img class="richtext-image full-width" src="/files/images/postcard-sign.jpg" width="800" alt="What's He Hiding?!"></p></div>
 </div>
 </div>
 </div>
