add some padding

--- a/proof/index.html
+++ b/proof/index.html
@@ -211,7 +211,7 @@
   <div class="block-WYSIWYG">
 
 
-<div class="rich-text"><p><img class="richtext-image full-width" src="/files/images/postcard-sign.jpg" width="800" alt="What's He Hiding?!"></p></div>
+<div class="rich-text"><p style="padding-left: 50px;"><img class="richtext-image full-width" src="/files/images/postcard-sign.jpg" width="800" alt="What's He Hiding?!"></p></div>
 </div>
 </div>
 </div>
