don't need a subject

--- a/proof/index.html
+++ b/proof/index.html
@@ -194,7 +194,7 @@
 
 <p>As always, we believe that Donald Trump is hiding his true hand size from the American people because his campaign advisors have assured him that America will never elect a candidate with creepy, baby hands.</p>
 
-<p>Please send your photographic evidence to <a href="mailto:info@donaldtrumphastinyhands.com">info@donaldtrumphastinyhands.com</a> subject: #handproof</p>
+<p>Please send your photographic evidence to <a href="mailto:info@donaldtrumphastinyhands.com">info@donaldtrumphastinyhands.com</a></p>
 
 </div>
 </div>
