--- a/donate/index.html
+++ b/donate/index.html
@@ -117,10 +117,15 @@ section.Hero {
     <div class="block-HTML">
 
 
-<div class="rich-text"><div style="color: #fff; padding-top: 10px;"><h3 style="font-weight: bold;">Help Send Pizzas to the Polls</h3>
-<img style="width: 60px; float: right" src="https://polls.pizza/images/logo.png">
-<p>The PAC has relaunched under Pizzas to the Polls. All donations will go towards this new effort. Learn more at <a href="https://polls.pizza" target="_blank.">polls.pizza</a>.</p></div></div>
+          <div class="rich-text">
+               <div style="color: #fff; padding-top: 10px;">
+                    <h3 style="font-weight: bold;">We are not currently accepting donations</h3>
+                    <!-- <img style="width: 60px; float: right" src="https://polls.pizza/images/logo.png">
+                    <p>The PAC has relaunched under Pizzas to the Polls. All donations will go towards this new effort. Learn more at <a href="https://polls.pizza" target="_blank.">polls.pizza</a>.</p> -->
+               </div>
+          </div>
   </div>
+  <!-- 
   <div class="current-step"><i class="fa fa-usd" id="step-one"></i><i class="fa fa-user"></i><i class="fa fa-credit-card"></i></div>
   <div class="donation-tray">
     <div class="donation-tray-amount">
@@ -161,8 +166,8 @@ section.Hero {
  <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://www.donaldtrumphastinyhands.com/donate.html" class="button" style="background-color: #c44042">Share on Facebook</a>
       <a target="_blank" href="https://twitter.com/intent/tweet?vial=trumptinyhands&text=I+just+donated+to+@trumptinyhands+-+you+should+too&related=trumptinyhands&url=https://www.donaldtrumphastinyhands.com/donate.html" class="button" style="background-color: #c44042">Share on Twitter</a></div>
 </div>
-
-    </div>
+     
+    </div>-->
   </div>
 </div>
 
