--- a/index.html
+++ b/index.html
@@ -269,13 +269,14 @@ section.Hero {
 </div>
 </section>
   
-    <section class="Hero_CTA">
+<!--    <section class="Hero_CTA">
 
 <style>
 .hero-cta-block {
    position: relative; top: -140px;
 }
 </style>
+
 <div class="hero-cta-block">
   <div class="block-Row">
 
@@ -414,14 +415,14 @@ Donate <a href="/donate/?amount=5" >$5</a> <a href="/donate/?amount=20">$20</a> 
 </div>
 </div>
 </div>
-</section>
+</section>-->
   
     <section class="HTML">
 
 
 <div class="rich-text">
      <div style="text-align: center; max-width: 1140px; margin: 0 auto;">
-          <p>Media Inquiries please contact Katie Nguyen, Communications Director at <a style="text-decoration: underline" href="tel:2028300678">(202) 830-0678</a> or <a style="text-decoration: underline" href="mailto:donaldtrumphastinyhands@gmail.com">donaldtrumphastinyhands@gmail.com</a></p>
+          <!--<p>Media Inquiries please contact Katie Nguyen, Communications Director at <a style="text-decoration: underline" href="tel:2028300678">(202) 830-0678</a> or <a style="text-decoration: underline" href="mailto:donaldtrumphastinyhands@gmail.com">donaldtrumphastinyhands@gmail.com</a></p>-->
 
           <iframe width="100%" height="640" src="https://www.youtube.com/embed/5LhNjWoBZck" frameborder="0" allowfullscreen></iframe>
      </div>
